We can now check if we get a token from the idp and send metrics to prometheus

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,22 @@
 
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          fint:
+            client-id: client-id
+            client-secret: client-secret
+            authorization-grant-type: password
+            scope: fint-client
+            provider: fint-idp
+        provider:
+          fint-idp:
+            token-uri: https://idp.felleskomponent.no/nidp/oauth/nam/token
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "info, health, metrics, prometheus"
