--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    //implementation('no.fint:fint-oauth-token-service:1.6.1')
+
 
     //implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
