--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -24,6 +24,18 @@ spec:
             requests:
               memory: "128Mi"
               cpu: "100m"
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: http
+            initialDelaySeconds: 30
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: http
+            initialDelaySeconds: 30
+            periodSeconds: 5
           ports:
             - containerPort: 8080
           envFrom:
